--- a/styles.css
+++ b/styles.css
@@ -44,24 +44,8 @@ header {
   justify-content: center;
   align-items: center;
   padding: 20px;
-  background-color: teal;
   color: #f6f6f6;
-  -webkit-text-stroke: 1px black;
-  border-bottom: 2px solid black;
-  background: linear-gradient(
-    90deg,
-    rgba(255, 0, 0, 0.3) 0%,
-    rgba(255, 154, 0, 0.3) 10%,
-    rgba(208, 222, 33, 0.3) 20%,
-    rgba(79, 220, 74, 0.3) 30%,
-    rgba(63, 218, 216, 0.3) 40%,
-    rgba(47, 201, 226, 0.3) 50%,
-    rgba(28, 127, 238, 0.3) 60%,
-    rgba(95, 21, 242, 0.3) 70%,
-    rgba(186, 12, 248, 0.3) 80%,
-    rgba(251, 7, 217, 0.3) 90%,
-    rgba(255, 0, 0, 0.3) 100%
-  );
+  -webkit-text-stroke: 2px black;
 }
 
 #top-page {
@@ -249,6 +233,7 @@ main {
 }
 
 .main-container .box {
+  opacity: 0.9;
   width: 292px;
   height: 400px;
   margin: 20px;
@@ -260,6 +245,7 @@ main {
   background-color: #f6f6f6;
   overflow: hidden;
   transition: transform 0.2s ease;
+  background-color: rgba(255, 255, 255, 0.4);
   -webkit-box-shadow: 0px 0px 55px -2px rgba(0, 0, 0, 1);
   -moz-box-shadow: 0px 0px 55px -2px rgba(0, 0, 0, 1);
   box-shadow: 0px 0px 55px -2px rgba(0, 0, 0, 1);
@@ -272,6 +258,7 @@ main {
 .flag-container {
   width: 100%;
   height: 200px;
+  z-index: 100;
 }
 
 .box .flag-container img {
@@ -286,6 +273,8 @@ main {
   justify-content: center;
   align-items: center;
   margin: auto 0;
+  width: 100%;
+  height: 100%;
 }
 
 .country-name {
@@ -294,7 +283,7 @@ main {
   font-size: 1.8rem;
 }
 .country-capital {
-  color: #333;
+  color: black;
   margin-top: 20px;
 }
 
